# tensorflow_advanced_techniques_specialization

./: .gitignore  LICENSE  pyproject.toml
Custom_Models_Layers_and_Loss_Functions/week1/: multi_output_model.ipynb  siamese_network.ipynb
Custom_Models_Layers_and_Loss_Functions/week2/: contrastive_loss.ipynb  huber_loss.ipynb  huber_loss_object.ipynb
Custom_Models_Layers_and_Loss_Functions/week2/week2_assignment/: course1_week2_assignment.ipynb
